tests/spec/compile-fail/184_char_literal_type_mismatch.zn
// category: compile-fail
// stage: mvp
// milestone: M2
// purpose: Char literals participate in simple type mismatch diagnostics

module tests.fail.charLiteralTypeMismatch;

struct Token {
    kind: Char,
}

fn needChar(ch: Char) -> Char {
    return ch;
}

fn badCharLiterals(flag: Bool, count: U32, ch: Char) -> Char {
    val numeric: U32 = 'x'; // expected-error[E0302]: initializer type U32 does not match Char expression
    var boolean: Bool = 'y'; // expected-error[E0302]: initializer type Bool does not match Char expression
    var token: Token = Token { kind: 'a' };
    token.kind = count; // expected-error[E0302]: field assignment kind type Char does not match U32 expression
    val badField = Token { kind: flag }; // expected-error[E0302]: field kind type Char does not match Bool expression
    val badArg = needChar(count); // expected-error[E0302]: argument 1 of needChar expects Char but got U32
    if (ch) { // expected-error[E0302]: if condition must be Bool, got Char
        return 'q';
    }
    return flag; // expected-error[E0302]: return type Char does not match Bool expression
}
